@@ -3,6 +3,7 @@
 1.5.73
   * fixed module of JobSpec and FileSpec
   * to allow main in --useAthenaTag
+  * improved pchain to set --useAthenaPackages automatically
 
 1.5.72
   * fixed for OIDC
